@@ -82,7 +82,7 @@
 			<animation effect="fade" time="300" start="100" end="0" tween="sine" easing="in">Hidden</animation>
 			<colordiffuse>ddFFFFFF</colordiffuse>
 			<visible>!Window.IsVisible(home) + !Window.IsVisible(Favourites) + !Window.IsVisible(playercontrols)</visible>
-			<visible>Window.IsActive(progressdialog) | Window.IsActive(okdialog) | Window.IsActive(DialogTextViewer.xml) | Window.IsActive(yesnodialog) | Window.IsActive(contextmenu) | Window.IsActive(virtualkeyboard)</visible>	
+			<visible>Window.IsActive(progressdialog) | Window.IsActive(okdialog) | Window.IsActive(DialogNumeric.xml) | Window.IsActive(DialogTextViewer.xml) | Window.IsActive(yesnodialog) | Window.IsActive(contextmenu) | Window.IsActive(virtualkeyboard)</visible>	
 		</control>
 		<control type="image">
 			<include>FullscreenDimensions</include>
