@@ -123,6 +123,7 @@
 			<!-- Custom Shortcuts -->
 			<shortcut label="Reload Skin" type="::LOCAL::20183" grouping="commands" icon="DefaultShortcut.png">XBMC.ReloadSkin()</shortcut>
 			<shortcut label="Debug Tools" type="::LOCAL::31290" grouping="commands" icon="DefaultShortcut.png">Skin.ToggleSetting(BelloFredoDebug)</shortcut>
+			<shortcut label="Debug Grid" type="::LOCAL::31289" grouping="commands" icon="DefaultShortcut.png">Skin.ToggleSetting(DebugGrid)</shortcut>
 			<shortcut label="Profiles" type="::LOCAL::13200" grouping="commands" icon="DefaultShortcut.png">ActivateWindow(Profiles)</shortcut>
 			<shortcut label="Logout" type="::LOCAL::20126" grouping="commands" icon="DefaultShortcut.png">System.LogOff</shortcut>
 		</node>
